Add basic text + add inputs

--- a/index.html
+++ b/index.html
@@ -8,11 +8,30 @@
   </head>
   <body>
     <div id="container">
-        <!-- Left side image -->
+      <!-- Left side image -->
       <img src="images/ufc.jpg" alt="boxing fight" />
 
       <!-- Right side/form -->
-       <div class="form"></div>
+      <div class="form">
+        <h1>
+          Become a UFC fighter right now, by getting in touch with the best
+          management un the business.
+        </h1>
+
+        <!-- Form box -->
+        <div class="form-box">
+          <h2>Apply now!</h2>
+
+          <form action="">
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+            <input type="text" />
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
