--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
           <h2>Apply now!</h2>
 
           <form action="">
+            <label for="first-name">First Name:</label>
             <input type="text" />
+
+            <label for="last-name">Last Name:</label>
             <input type="text" />
+
+            <label for="experience">Years of experience</label>
+            <input type="number" />
+
+            <label for="number">Phone number:</label>
             <input type="text" />
+
+            <label for="password">Password:</label>
             <input type="text" />
-            <input type="text" />
+
+            <label for="password">Repeat password:</label>
             <input type="text" />
           </form>
         </div>
