--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 
           <form action="">
             <label for="first-name">First Name:</label>
-            <input type="text" />
+            <input type="text" id="first-name" name="first-name"/>
 
             <label for="last-name">Last Name:</label>
-            <input type="text" />
+            <input type="text" id="last-name" name="last-name"/>
 
             <label for="experience">Years of experience</label>
-            <input type="number" />
+            <input type="number" id="experience" name="experience"/>
 
             <label for="number">Phone number:</label>
-            <input type="text" />
+            <input type="number" id="number" name="number"/>
 
             <label for="password">Password:</label>
-            <input type="text" />
+            <input type="password" id="password" name="password"/>
 
-            <label for="password">Repeat password:</label>
-            <input type="text" />
+            <label for="re-password">Repeat password:</label>
+            <input type="password" id="re-password" name="re-password"/>
           </form>
         </div>
       </div>
