--- a/index.html
+++ b/index.html
@@ -23,23 +23,29 @@
           <h2>Apply now!</h2>
 
           <form action="">
-            <label for="first-name">First Name:</label>
-            <input type="text" id="first-name" name="first-name"/>
+            <div class="column-one">
+              <label for="first-name">First Name:</label>
+              <input type="text" id="first-name" name="first-name" />
 
-            <label for="last-name">Last Name:</label>
-            <input type="text" id="last-name" name="last-name"/>
+              <label for="experience">Years of experience</label>
+              <input type="number" id="experience" name="experience" />
 
-            <label for="experience">Years of experience</label>
-            <input type="number" id="experience" name="experience"/>
+              <label for="password">Password:</label>
+              <input type="password" id="password" name="password" />
+            </div>
 
-            <label for="number">Phone number:</label>
-            <input type="number" id="number" name="number"/>
+            <div class="column-two">
+              <label for="last-name">Last Name:</label>
+              <input type="text" id="last-name" name="last-name" />
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"/>
+              <label for="number">Phone number:</label>
+              <input type="number" id="number" name="number" />
 
-            <label for="re-password">Repeat password:</label>
-            <input type="password" id="re-password" name="re-password"/>
+              <label for="re-password">Repeat password:</label>
+              <input type="password" id="re-password" name="re-password" />
+            </div>
+
+            </div>
           </form>
         </div>
       </div>
