Add fieldsets and remove borders

--- a/index.html
+++ b/index.html
@@ -24,25 +24,37 @@
 
           <form action="">
             <div class="column-one">
-              <label for="first-name">First Name:</label>
+              <fieldset>
+                <label for="first-name">First Name:</label>
               <input type="text" id="first-name" name="first-name" />
+              </fieldset>
 
-              <label for="experience">Years of experience</label>
+              <fieldset>
+                <label for="experience">Years of experience</label>
               <input type="number" id="experience" name="experience" />
+              </fieldset>
 
-              <label for="password">Password:</label>
+              <fieldset>
+                <label for="password">Password:</label>
               <input type="password" id="password" name="password" />
+              </fieldset>
             </div>
 
             <div class="column-two">
-              <label for="last-name">Last Name:</label>
+              <fieldset>
+                <label for="last-name">Last Name:</label>
               <input type="text" id="last-name" name="last-name" />
+              </fieldset>
 
-              <label for="number">Phone number:</label>
+              <fieldset>
+                <label for="number">Phone number:</label>
               <input type="number" id="number" name="number" />
+              </fieldset>
 
-              <label for="re-password">Repeat password:</label>
+              <fieldset>
+                <label for="re-password">Repeat password:</label>
               <input type="password" id="re-password" name="re-password" />
+              </fieldset>
             </div>
 
             </div>
