--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up form</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="container">
@@ -29,37 +32,35 @@
             <div class="column-one">
               <fieldset>
                 <label for="first-name">First Name:</label>
-              <input type="text" id="first-name" name="first-name" />
+                <input type="text" id="first-name" name="first-name" />
               </fieldset>
 
               <fieldset>
                 <label for="experience">Years of experience</label>
-              <input type="number" id="experience" name="experience" />
+                <input type="number" id="experience" name="experience" />
               </fieldset>
 
               <fieldset>
                 <label for="password">Password:</label>
-              <input type="password" id="password" name="password" />
+                <input type="password" id="password" name="password" />
               </fieldset>
             </div>
 
             <div class="column-two">
               <fieldset>
                 <label for="last-name">Last Name:</label>
-              <input type="text" id="last-name" name="last-name" />
+                <input type="text" id="last-name" name="last-name" />
               </fieldset>
 
               <fieldset>
                 <label for="number">Phone number:</label>
-              <input type="number" id="number" name="number" />
+                <input type="number" id="number" name="number" />
               </fieldset>
 
               <fieldset>
                 <label for="re-password">Repeat password:</label>
-              <input type="password" id="re-password" name="re-password" />
+                <input type="password" id="re-password" name="re-password" />
               </fieldset>
-            </div>
-
             </div>
           </form>
         </div>
