Capitalize label text + style it

--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
           <form action="">
             <div class="column-one">
               <fieldset>
-                <label for="first-name">First Name:</label>
+                <label for="first-name">FIRST NAME:</label>
                 <input type="text" id="first-name" name="first-name" />
               </fieldset>
 
               <fieldset>
-                <label for="experience">Years of experience</label>
+                <label for="experience">YEARS OF EXPERIENCE:</label>
                 <input type="number" id="experience" name="experience" />
               </fieldset>
 
               <fieldset>
-                <label for="password">Password:</label>
+                <label for="password">PASSWORD:</label>
                 <input type="password" id="password" name="password" />
               </fieldset>
             </div>
 
             <div class="column-two">
               <fieldset>
-                <label for="last-name">Last Name:</label>
+                <label for="last-name">LAST NAME:</label>
                 <input type="text" id="last-name" name="last-name" />
               </fieldset>
 
               <fieldset>
-                <label for="number">Phone number:</label>
+                <label for="number">PHONE NUMBER:</label>
                 <input type="number" id="number" name="number" />
               </fieldset>
 
               <fieldset>
-                <label for="re-password">Repeat password:</label>
+                <label for="re-password">REPEAT PASSWORD:</label>
                 <input type="password" id="re-password" name="re-password" />
               </fieldset>
             </div>
