Add overlay div + button + login text

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   <body>
     <div id="container">
       <!-- Left side image -->
-      <img src="images/ufc.jpg" alt="boxing fight" />
+      <div class="left-side">
+        <img src="images/ufc.jpg" alt="boxing fight" />
+        <div class="overlay"></div>
+      </div>
 
       <!-- Right side/form -->
       <div class="form">
         <h1>
           Become a UFC fighter right now, by getting in touch with the best
-          management un the business.
+          management in the business.
         </h1>
 
         <!-- Form box -->
@@ -64,6 +67,10 @@
             </div>
           </form>
         </div>
+
+        <button>Sign up now</button>
+
+        <p>Already have an account? <span>Log in</span></p>
       </div>
     </div>
   </body>
