Add ufc logo + style and position it

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <!-- Left side image -->
       <div class="left-side">
         <img src="images/ufc.jpg" alt="boxing fight" />
-        <div class="overlay"></div>
+        <div class="overlay">
+            <img src="images/ufc-logo.png" alt="ufc logo">
+        </div>
       </div>
 
       <!-- Right side/form -->
