Add button to styles + split right and left side

--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
   </head>
   <body>
     <div id="container">
-      <!-- Left side image -->
+      <!-- Left side -->
       <div class="left-side">
         <img src="images/ufc.jpg" alt="boxing fight" />
         <div class="overlay">
-            <img src="images/ufc-logo.png" alt="ufc logo">
+          <img src="images/ufc-logo.png" alt="ufc logo" />
         </div>
       </div>
 
-      <!-- Right side/form -->
-      <div class="form">
+      <!-- Right side -->
+      <div class="right-side">
         <h1>
           Become a UFC fighter right now, by getting in touch with the best
           management in the business.
         </h1>
 
-        <!-- Form box -->
         <div class="form-box">
           <h2>Apply now!</h2>
 
@@ -71,7 +70,6 @@
         </div>
 
         <button>Sign up now</button>
-
         <p>Already have an account? <span>Log in</span></p>
       </div>
     </div>
