Move h2 from form box

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           management in the business.
         </h1>
 
-        <div class="form-box">
-          <h2>Apply now!</h2>
+        <h2>Apply now!</h2>
 
+        <div class="form-box">
           <form action="">
             <div class="column-one">
               <fieldset>
@@ -70,7 +70,7 @@
         </div>
 
         <button>Sign up now</button>
-        <p>Already have an account? <span>Log in</span></p>
+        <p>Already have an account? <a href="#">Log in</a></p>
       </div>
     </div>
   </body>
