--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
             <div class="column-one">
               <fieldset>
                 <label for="first-name">FIRST NAME:</label>
-                <input type="text" id="first-name" name="first-name" />
+                <input type="text" id="first-name" name="first-name" 
+                placeholder="Daniel"/>
               </fieldset>
 
               <fieldset>
                 <label for="experience">YEARS OF EXPERIENCE:</label>
-                <input type="number" id="experience" name="experience" />
+                <input type="number" id="experience" name="experience" 
+                placeholder="10"/>
               </fieldset>
 
               <fieldset>
@@ -53,12 +55,14 @@
             <div class="column-two">
               <fieldset>
                 <label for="last-name">LAST NAME:</label>
-                <input type="text" id="last-name" name="last-name" />
+                <input type="text" id="last-name" name="last-name" 
+                placeholder="Cormier"/>
               </fieldset>
 
               <fieldset>
                 <label for="number">PHONE NUMBER:</label>
-                <input type="number" id="number" name="number" />
+                <input type="number" id="number" name="number" 
+                placeholder="99876567"/>
               </fieldset>
 
               <fieldset>
@@ -69,7 +73,7 @@
           </form>
         </div>
 
-        <button>Sign up now</button>
+        <button type="submit">Sign up now</button>
         <p>Already have an account? <a href="#">Log in</a></p>
       </div>
     </div>
