Add required type to inputs

--- a/index.html
+++ b/index.html
@@ -36,38 +36,63 @@
             <div class="column-one">
               <fieldset>
                 <label for="first-name">FIRST NAME:</label>
-                <input type="text" id="first-name" name="first-name" 
-                placeholder="Daniel"/>
+                <input
+                  type="text"
+                  id="first-name"
+                  name="first-name"
+                  placeholder="Daniel"
+                  required
+                />
               </fieldset>
 
               <fieldset>
                 <label for="experience">YEARS OF EXPERIENCE:</label>
-                <input type="number" id="experience" name="experience" 
-                placeholder="10"/>
+                <input
+                  type="number"
+                  id="experience"
+                  name="experience"
+                  placeholder="10"
+                  required
+                />
               </fieldset>
 
               <fieldset>
                 <label for="password">PASSWORD:</label>
-                <input type="password" id="password" name="password" />
+                <input type="password" id="password" name="password" required />
               </fieldset>
             </div>
 
             <div class="column-two">
               <fieldset>
                 <label for="last-name">LAST NAME:</label>
-                <input type="text" id="last-name" name="last-name" 
-                placeholder="Cormier"/>
+                <input
+                  type="text"
+                  id="last-name"
+                  name="last-name"
+                  placeholder="Cormier"
+                  required
+                />
               </fieldset>
 
               <fieldset>
                 <label for="number">PHONE NUMBER:</label>
-                <input type="number" id="number" name="number" 
-                placeholder="99876567"/>
+                <input
+                  type="number"
+                  id="number"
+                  name="number"
+                  placeholder="99876567"
+                  required
+                />
               </fieldset>
 
               <fieldset>
                 <label for="re-password">REPEAT PASSWORD:</label>
-                <input type="password" id="re-password" name="re-password" />
+                <input
+                  type="password"
+                  id="re-password"
+                  name="re-password"
+                  required
+                />
               </fieldset>
             </div>
           </form>
