Remove unused required type + add input valid

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
           <form action="#" method="get">
             <div class="column-one">
               <fieldset>
-                <label for="first-name">* FIRST NAME:</label>
+                <label for="first-name">FIRST NAME:</label>
                 <input
                   type="text"
                   id="first-name"
                   name="first-name"
                   placeholder="Daniel"
-                  required
                 />
               </fieldset>
 
@@ -52,7 +51,6 @@
                   id="experience"
                   name="experience"
                   placeholder="example@gmail.com"
-                  required
                 />
               </fieldset>
 
@@ -64,13 +62,12 @@
 
             <div class="column-two">
               <fieldset>
-                <label for="last-name">* LAST NAME:</label>
+                <label for="last-name">LAST NAME:</label>
                 <input
                   type="text"
                   id="last-name"
                   name="last-name"
                   placeholder="Cormier"
-                  required
                 />
               </fieldset>
 
@@ -80,8 +77,9 @@
                   type="number"
                   id="number"
                   name="number"
-                  placeholder="99876567"
+                  placeholder="+357 99 876 567"
                   required
+                  pattern=""
                 />
               </fieldset>
 
