--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
               <fieldset>
                 <label for="password">* PASSWORD:</label>
-                <input type="password" id="password" name="password" required />
+                <input type="password" id="password" name="password" required 
+                minlength="8"/>
               </fieldset>
             </div>
 
@@ -74,12 +75,12 @@
               <fieldset>
                 <label for="number">* PHONE NUMBER:</label>
                 <input
-                  type="number"
+                  type="tel"
                   id="number"
                   name="number"
-                  placeholder="+357 99 876 567"
+                  placeholder="+357 99 876567"
                   required
-                  pattern=""
+                  pattern="(\+357|00357)? ?\d{2} ?\d{6}"
                 />
               </fieldset>
 
@@ -90,6 +91,7 @@
                   id="re-password"
                   name="re-password"
                   required
+                  minlength="8"
                 />
               </fieldset>
             </div>
